--- a/ml_portfolio.ipynb
+++ b/ml_portfolio.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -53,13 +53,22 @@
       "2018-07-02  3095040000  \n",
       "2018-07-03  1911460000  \n",
       "\n",
+      "Google Data:\n",
+      "                 Open       High        Low      Close  Adj Close    Volume\n",
+      "Date                                                                       \n",
+      "2018-06-27  56.799999  57.310501  55.834999  55.847000  55.847000  34538000\n",
+      "2018-06-28  55.619499  56.700001  55.303501  56.339001  56.339001  29726000\n",
+      "2018-06-29  56.615501  57.068001  56.351002  56.459499  56.459499  31562000\n",
+      "2018-07-02  55.767502  57.149502  55.330002  57.105499  57.105499  23216000\n",
+      "2018-07-03  57.471001  57.495499  55.721500  55.813999  55.813999  16448000\n",
+      "\n",
       "Apple Data:\n",
       "                 Open       High        Low      Close  Adj Close     Volume\n",
       "Date                                                                        \n",
       "2018-06-27  46.307499  46.820000  46.007500  46.040001  43.999290  101141200\n",
-      "2018-06-28  46.025002  46.552502  45.950001  46.375000  44.319439   69460800\n",
-      "2018-06-29  46.572498  46.797501  45.727501  46.277500  44.226265   90950800\n",
-      "2018-07-02  45.955002  46.825001  45.855000  46.794998  44.720818   70925200\n",
+      "2018-06-28  46.025002  46.552502  45.950001  46.375000  44.319443   69460800\n",
+      "2018-06-29  46.572498  46.797501  45.727501  46.277500  44.226261   90950800\n",
+      "2018-07-02  45.955002  46.825001  45.855000  46.794998  44.720833   70925200\n",
       "2018-07-03  46.947498  46.987499  45.884998  45.980000  43.941956   55819200\n"
      ]
     }
@@ -266,7 +275,7 @@
    "source": [
     "# CAPM\n",
     "\n",
-    "Same as Sinlg Index Model"
+    "Same as Single Index Model"
    ]
   },
   {
@@ -565,24 +574,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.003311451836866234 -0.0005286240617439164\n",
-      "{'AAPL': 2936233787392, 'GOOGL': 1557339176960}\n",
+      "0.006559740845200915 -0.002054182457134094\n",
+      "{'AAPL': 2927425748992, 'GOOGL': 1511256883200}\n",
       "[*********************100%***********************]  1 of 1 completed\n",
-      "2.57553131544276\n",
-      "AAPL     0.271605\n",
-      "GOOGL    0.233079\n",
+      "2.5755329645192355\n",
+      "AAPL     0.272211\n",
+      "GOOGL    0.232615\n",
       "dtype: float64\n",
-      "AAPL     0.094193\n",
-      "GOOGL    0.086254\n",
+      "AAPL     0.096116\n",
+      "GOOGL    0.086143\n",
       "dtype: float64\n",
-      "OrderedDict([('AAPL', 0.53022), ('GOOGL', 0.46978)])\n"
+      "OrderedDict([('AAPL', 0.53797), ('GOOGL', 0.46203)])\n"
      ]
     },
     {
@@ -597,7 +606,8 @@
    "source": [
     "from pypfopt import BlackLittermanModel, plotting\n",
     "from pypfopt import black_litterman, risk_models\n",
-    "\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "import pandas as pd\n",
     "# Fit non linear ML models to predict stock returns into future\n",
     "apple_returns = (\n",
     "    (apple_data['Close'] / apple_data['Close'].shift(1))-1).dropna().tolist()\n",
@@ -634,8 +644,8 @@
     "    mcaps[t] = stock.info[\"marketCap\"]\n",
     "print(mcaps)\n",
     "\n",
-    "# prices = pd.DataFrame({'AAPL':apple_data['Close'].values,'GOOGL':google_data['Close'].values})\n",
-    "# S = risk_models.CovarianceShrinkage(prices).ledoit_wolf()\n",
+    "prices = pd.DataFrame({'AAPL':apple_data['Close'].values,'GOOGL':google_data['Close'].values})\n",
+    "S = risk_models.CovarianceShrinkage(prices).ledoit_wolf()\n",
     "market_prices = yf.download(\"SPY\", period=\"max\")[\"Adj Close\"]\n",
     "\n",
     "\n",
@@ -768,7 +778,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "2022.10.undefined"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
